metadata/force-app/main/default/objects/CustomName_kGIuC__c/CustomName_kGIuC__c.object-meta.xml
<CustomObject>
    <description>Description_xiRan</description>
    <label>CustomLabel_lUhCn</label>
    <nameField>
        <label>CustomLabel_lUhCn</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_lUhCns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>