metadata/force-app/main/default/objects/CustomName_kGIuC__c/fields/CustomField_koYEC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_koYEC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldEQaTt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>